--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="name-of-project" default="build">
  <target name="build"
-   depends="prepare,lint,pdepend,phpcs-ci,phpcpd,phpdox,phpunit"/>
+   depends="prepare,lint,pdepend,phpcs-ci,phpcpd,phpunit"/>
 
  <target name="build-parallel"
    depends="prepare,lint,tools-parallel,phpunit"/>
@@ -13,7 +13,6 @@
    </sequential>
    <antcall target="phpcpd"/>
    <antcall target="phpcs-ci"/>
-   <antcall target="phpdox"/>
   </parallel>
  </target>
 
