--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="name-of-project" default="build">
  <target name="build"
-   depends="prepare,lint"/>
+   depends="prepare,lint,phpdox"/>
 
  <target name="build-parallel"
-   depends="prepare,lint,tools-parallel"/>
+   depends="prepare,lint,phpdox,tools-parallel"/>
 
  <target name="tools-parallel" description="Run tools in parallel">
   <parallel threadCount="2">
    <sequential>
    </sequential>
+   <antcall target="phpdox"/>
   </parallel>
  </target>
 
@@ -24,6 +25,7 @@
   <mkdir dir="${basedir}/build/coverage"/>
   <mkdir dir="${basedir}/build/logs"/>
   <mkdir dir="${basedir}/build/phpdox"/>
+  <mkdir dir="${basedir}/build/phpdox"/>
  </target>
 
  <target name="lint" description="Perform syntax check of sourcecode files">
@@ -36,6 +38,10 @@
    </fileset>
 
   </apply>
+ </target>
+
+ <target name="phpdox" description="Generate API documentation using phpDox">
+  <exec executable="phpdox"/>
  </target>
 
 </project>
