--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="name-of-project" default="build">
  <target name="build"
-   depends="prepare,lint,phpdox"/>
+   depends="prepare,lint"/>
 
  <target name="build-parallel"
-   depends="prepare,lint,phpdox,tools-parallel"/>
+   depends="prepare,lint,tools-parallel"/>
 
  <target name="tools-parallel" description="Run tools in parallel">
   <parallel threadCount="2">
    <sequential>
    </sequential>
-   <antcall target="phpdox"/>
   </parallel>
  </target>
 
@@ -24,8 +23,6 @@
   <mkdir dir="${basedir}/build/api"/>
   <mkdir dir="${basedir}/build/coverage"/>
   <mkdir dir="${basedir}/build/logs"/>
-  <mkdir dir="${basedir}/build/phpdox"/>
-  <mkdir dir="${basedir}/build/phpdox"/>
  </target>
 
  <target name="lint" description="Perform syntax check of sourcecode files">
@@ -38,10 +35,6 @@
    </fileset>
 
   </apply>
- </target>
-
- <target name="phpdox" description="Generate API documentation using phpDox">
-  <exec executable="phpdox"/>
  </target>
 
 </project>
