--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
    depends="prepare,lint"/>
 
  <target name="build-parallel"
-   depends="prepare,lint,tools-parallel,test"/>
+   depends="prepare,lint,tools-parallel"/>
 
  <target name="tools-parallel" description="Run tools in parallel">
   <parallel threadCount="2">
